# polynomial-functors

./: CHANGELOG.md  LICENSE.txt  README.md  Theory.md  default.nix  polynomial-functors.cabal  shell.nix  stdlib.lp
.github/workflows/: main.yml
nix/: sources.json
src/: Bool.hs  Common.hs  Main.hs  REPL.hs
src/Data/: Boundary.hs
src/Data/Functor/: Poly.hs
src/Data/Graph/: Conversion.hs  JSON.hs
src/Data/Machine/: Moore.hs
src/Debug/: Utils.hs
src/Effect/: Logger.hs
src/LambdaPi/: AST.hs  Check.hs  Common.hs  Enums.hs  Eval.hs  Init.hs  Main.hs  Parser.hs  Printer.hs  Quote.hs  REPL.hs
src/LambdaPi/Check/: PatternMatching.hs
test/: JSON.hs  LambdaPiTest.hs  Utils.hs
