cabal-version:      3.0
name:               polynomial-functors
version:            0.1.0.0
synopsis:
license:
author:             o1lo01ol1o
maintainer:         repos@befunctional.io
category:           Data
extra-source-files: CHANGELOG.md

library
  exposed-modules:
        Common
        REPL
        LambdaPi.AST
        LambdaPi.Check
        LambdaPi.Eval
        LambdaPi.Parser
        LambdaPi.Printer
        LambdaPi.Quote
  build-depends:
      base >=4.9.1.0
    , mtl >=2.2.1
    , parsec >=3.1.11
    , pretty >=1.1.3.5

  hs-source-dirs:   src
  default-language: Haskell2010

executable lp
    main-is: LambdaPi/Main.hs
    buildable: True
    hs-source-dirs: src
    build-depends:
        base >=4.9.1.0
      , mtl >=2.2.1
      , parsec >=3.1.11
      , pretty >=1.1.3.5
    other-modules:
        Common
        REPL
        LambdaPi.AST
        LambdaPi.Check
        LambdaPi.Eval
        LambdaPi.Parser
        LambdaPi.Printer
        LambdaPi.Quote
    ghc-options: -main-is LambdaPi.Main
    default-language: Haskell2010


-- test-suite polynomial-functors-test
--   default-language: Haskell2010
--   type:             exitcode-stdio-1.0
--   hs-source-dirs:   test
--   main-is:          MyLibTest.hs
--   build-depends:
--     , base            ^>=4.12
--     , hedgehog
--     , QuickCheck
--     , tasty
--     , tasty-hedgehog
