cabal-version:      2.4
name:               polynomial-functors
version:            0.1.0.0
synopsis:
license:
author:             o1lo01ol1o
maintainer:         repos@befunctional.io
category:           Data
extra-source-files: CHANGELOG.md

library
  exposed-modules:
        LambdaPi.Common
        LambdaPi.REPL
        LambdaPi.Main
        LambdaPi.AST
        LambdaPi.Check
        LambdaPi.Eval
        LambdaPi.Parser
        LambdaPi.Printer
        LambdaPi.Quote
        Debug.Utils

  build-depends:
      base >=4.9.1.0
    , mtl >=2.2.1
    , parsec >=3.1.11
    , pretty >=1.1.3.5
    , text
    , tasty
    , tasty-hunit

  extensions: LambdaCase, OverloadedStrings, TupleSections
  ghc-options: -fwarn-incomplete-uni-patterns
  hs-source-dirs: src
  default-language: Haskell2010

executable lp
    main-is: LambdaPi/Main.hs
    buildable: True
    hs-source-dirs: src
    build-depends:
        base >=4.9.1.0
      , mtl >=2.2.1
      , parsec >=3.1.11
      , pretty >=1.1.3.5
      , text
    extensions: LambdaCase, OverloadedStrings, TupleSections
    other-modules:
        LambdaPi.Common
        LambdaPi.REPL
        LambdaPi.AST
        LambdaPi.Check
        LambdaPi.Eval
        LambdaPi.Parser
        LambdaPi.Printer
        LambdaPi.Quote
        Debug.Utils
    default-language: Haskell2010


test-suite polynomial-functors-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          LambdaPiTest.hs
  extensions: LambdaCase, OverloadedStrings, TupleSections
  build-depends:
    , base            ^>=4.12
    , text
    , hedgehog
    , QuickCheck
    , tasty
    , tasty-hedgehog
    , tasty-hunit
    , mtl
    , polynomial-functors
